# wids-wildfire-threat

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
configs/: data_config.yaml  feature_config.yaml  logging_config.yaml  model_config.yaml
docs/: data_dictionary.md  experiment_log.md  feature_catalog.md  modeling_decisions.md  problem_statement.md  runbook.md
models/: advanced_results.json  baseline_results.json  ensemble_results.json  ensemble_weights.json  oof_predictions_gradient_boosted_survival.parquet  oof_predictions_random_survival_forest.parquet  oof_predictions_weibull_aft.parquet  oof_predictions_xgboost.parquet  test_predictions_gradient_boosted_survival.parquet  test_predictions_random_survival_forest.parquet  test_predictions_weibull_aft.parquet  test_predictions_xgboost.parquet  tuned_params.json
notebooks/: 01_eda_overview.ipynb  02_eda_geospatial.ipynb  03_eda_survival_curves.ipynb  04_feature_analysis.ipynb  05_error_analysis.ipynb
reports/data_quality/: adversarial_feature_importance.csv  adversarial_validation.md  permutation_importance.csv  rfe_features.txt  subset_cv_summary.md
scripts/: download_data.sh  run_pipeline.sh  run_pipeline_advanced.sh  setup_env.sh
tests/: test_data_processing.py  test_data_quality.py  test_ensemble.py  test_evaluate.py  test_feature_engineering.py  test_model_pipeline.py  test_phase5_models.py  test_phase6_5_models.py  test_submission_format.py
(+38 files in other folders)
